# hyper-vibekanban

./: .gitignore  AGENTS.md  CHANGELOG.md  PHASE-4-ACCEPTANCE.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-Hans.md  README.zh-Hant.md  local-build.sh  package.json  pnpm-lock.yaml
.cursor/rules/: ubuntu1-proxy.mdc  vk-main-stack-protect.mdc  worktree-preview-isolate.mdc  worktree-preview-ubuntu1.mdc
.github/workflows/: pre-release.yml  publish.yml
crates/db/: Cargo.toml
crates/remote/: Cargo.toml  (+3 more)
crates/workspace-manager/: Cargo.toml
crates/workspace-manager/src/: workspace_manager.rs
docs/: ai-workflow-spine-plan.md  board-agents-plan.md  coding-agent-versions.md  docs.json  feature-babysitter-plan.md  frontend-workspace-perf.md  remote-access.mdx  responsible-disclosure.mdx  supported-coding-agents.mdx  vk-mobile-tailscale-troubleshooting.md  vk-usage.md  vk-worker-host-sop.md
e2e/: AGENT_DOD.md  README.md  playwright.config.ts
npx-cli/: package.json
scripts/: apply-local-lite-mode.js  dev-full-local.sh  dev-local-lite.sh  e2e-run.sh  generate-tauri-update-json.js  pull-remote-docker-images.sh  remote-up.sh  setup-dev-environment.js  vite-dev-supervisor.sh  vk-agent-stack-up.sh  vk-autostart.sh  vk-dev-lib.sh  vk-install-autostart.sh  vk-isolate.CODING-AGENT.md  vk-isolate.sh  vk-ports.sh  vk-preview-full.sh  vk-preview-remote.sh  vk-preview.config.env.example  vk-render-caddyfile.sh  vk-run-dev.sh  vk-start.sh  vk-status.sh  vk-stop.sh  vk-test-feature.sh  vk-uninstall-autostart.sh
shared/: remote-types.ts  types.ts
(+282 files in other folders)
